refactor: 同步改从 Uniview 实时取数，并维修一轮代码评审问题
同步与资产统计（重构）
- 删除 MySQL 实体/仓储、BandwidthService、SyncConfig、StatsController、
  OpticalPowerInspection/PortWatch、DeviceStatsService
- 新增 LinkInspectionResultRepository，资产统计改走 InventoryStats*
- 补充 docs/sync-stats-redesign.md

巡检修复（评审轮）
- 带宽字段 Integer→Double：库中仍存 VC-12 个数，读取时按 155.52/63 换算成 Mbps
  （只在 InspectionService.getLinkResults() 这唯一出口换算，不动历史数据与 DDL）
- 定时巡检 cron 先校验后落库 + 启动容错；移除 setEnabled 里的死代码
- MySQL 连接池不再被并发请求互关
- 备份/恢复改用 VACUUM INTO 快照、校验上传库、清理 -wal/-shm 边车文件
- threshold_rule 旧结构改为迁移而非 DROP，保留人工改过的门限值
- 前端：clock.js 存储型 XSS + 详情面板改 DOM 构造、device.js 自动刷新保留筛选、
  progress.js 读错异常列键、task.js 去掉「按链路过滤端口」假开关

测试：新增 24 个用例，合计 168 个全部通过

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>