@@ -2,31 +2,50 @@ package com.optel.qxinspection.controller;
 
 import com.optel.qxinspection.entity.sqlite.AuditLog;
 import com.optel.qxinspection.entity.sqlite.InspectionRound;
-import com.optel.qxinspection.entity.sqlite.OpticalPowerInspection;
-import com.optel.qxinspection.entity.sqlite.PortWatch;
+import com.optel.qxinspection.entity.sqlite.LinkInspectionResult;
 import com.optel.qxinspection.entity.sqlite.ThresholdRule;
-import com.optel.qxinspection.repository.sqlite.PortWatchRepository;
-import com.optel.qxinspection.repository.sqlite.ThresholdRuleRepository;
+import com.optel.qxinspection.service.AuditService;
 import com.optel.qxinspection.service.ClockInspectionService;
 import com.optel.qxinspection.service.InspectionScheduler;
 import com.optel.qxinspection.service.InspectionService;
-import com.optel.qxinspection.service.AuditService;
 import com.optel.qxinspection.service.ThresholdService;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.poi.ss.usermodel.*;
+import org.apache.poi.ss.usermodel.BorderStyle;
+import org.apache.poi.ss.usermodel.Cell;
+import org.apache.poi.ss.usermodel.CellStyle;
+import org.apache.poi.ss.usermodel.Font;
+import org.apache.poi.ss.usermodel.HorizontalAlignment;
+import org.apache.poi.ss.usermodel.IndexedColors;
+import org.apache.poi.ss.usermodel.Row;
+import org.apache.poi.ss.usermodel.Sheet;
+import org.apache.poi.ss.usermodel.VerticalAlignment;
+import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.ss.util.CellRangeAddress;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
 import java.io.OutputStream;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Map;
-import org.springframework.beans.factory.annotation.Value;
 
 @Slf4j
 @RestController
@@ -34,22 +53,41 @@ import org.springframework.beans.factory.annotation.Value;
 @RequiredArgsConstructor
 public class InspectionController {
 
+    /** 导出：空白占位 */
+    private static final String EMPTY_CELL = "--";
+
+    /** 导出：主表列数（序号 + 链路名称 + A端12列 + Z端12列） */
+    private static final int EXPORT_COLUMNS = 26;
+
+    private static final DateTimeFormatter FILE_TIME_FMT = DateTimeFormatter.ofPattern("yyyyMMddHHmm");
+
+    /** 审计日志中的目标名 */
+    private static final String AUDIT_TARGET_SQLITE = "SQLite数据库";
+
+    /** 恢复前自动留存的快照文件名 */
+    private static final String PRE_RESTORE_BACKUP = "qx_inspection_backup_before_restore.db";
+
+    /** 恢复时校验的必需表：`sqlite_master` 里至少要有这些 */
+    private static final List<String> REQUIRED_TABLES =
+            List.of("link_inspection_result", "inspection_round", "device_access_config");
+
+    private static final String JDBC_SQLITE_PREFIX = "jdbc:sqlite:";
+
     private final InspectionService inspectionService;
     private final InspectionScheduler inspectionScheduler;
     private final AuditService auditService;
     private final ThresholdService thresholdService;
-    private final ThresholdRuleRepository thresholdRuleRepository;
-    private final PortWatchRepository portWatchRepository;
     private final ClockInspectionService clockInspectionService;
-    private final com.optel.qxinspection.service.BandwidthService bandwidthService;
-
-    private static final DateTimeFormatter DT_FMT = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+    private final org.springframework.jdbc.core.JdbcTemplate sqliteJdbc;
 
     @Value("${app.admin-token:}")
     private String adminToken;
 
+    @Value("${spring.datasource.sqlite.url}")
+    private String sqliteUrl;
+
     /**
-     * 触发全网巡检
+     * 触发巡检
      */
     @PostMapping("/start")
     public Map<String, Object> startInspection(@RequestParam(required = false) String network,
@@ -70,7 +108,7 @@ public class InspectionController {
         return Map.of(
                 "roundId", round.getId(),
                 "status", round.getStatus(),
-                "totalDevices", round.getTotalCount()
+                "totalLinks", round.getTotalCount()
         );
     }
 
@@ -99,386 +137,274 @@ public class InspectionController {
     }
 
     /**
-     * 获取最新轮次中去重的端口名列表
-     */
-    @GetMapping("/port-names")
-    public List<Map<String, String>> getPortNames() {
-        return inspectionService.getPortNames();
-    }
-
-    /**
-     * 查询巡检结果（最新轮次或指定轮次）
-     */
-    @GetMapping("/results")
-    public List<OpticalPowerInspection> getResults(
-            @RequestParam(required = false) Long roundId,
-            @RequestParam(required = false) String neId,
-            @RequestParam(required = false) String network) {
-        if (roundId != null) {
-            List<OpticalPowerInspection> data = inspectionService.getResultsByRound(roundId, network);
-            if (neId != null && !neId.isEmpty()) {
-                return data.stream().filter(r -> neId.equals(r.getNeId())).toList();
-            }
-            return data;
-        }
-        if (neId != null && !neId.isEmpty()) {
-            return inspectionService.getResultsByNe(neId);
-        }
-        return inspectionService.getLatestResults(network);
-    }
-
-    /**
-     * 对比两次巡检结果
-     */
-    @GetMapping("/compare")
-    public Map<String, Object> compareRounds(@RequestParam Long roundA,
-                                             @RequestParam Long roundB) {
-        return inspectionService.compareRounds(roundA, roundB);
-    }
-
-    /**
-     * 导出巡检结果为 Excel（含带宽利用率）
-     */
-    @GetMapping("/export")
-    public void exportExcel(@RequestParam(required = false) Long roundId,
-                            @RequestParam(required = false) String network,
-                            @RequestParam(defaultValue = "true") boolean showInvalid,
-                            HttpServletResponse response) throws IOException {
-        List<OpticalPowerInspection> data;
-        if (roundId != null) {
-            data = inspectionService.getResultsByRound(roundId, network);
-        } else {
-            data = inspectionService.getLatestResults(network);
-        }
-        if (!showInvalid) {
-            data = data.stream().filter(r -> Boolean.TRUE.equals(r.getSupported())).toList();
-        }
-
-        // 加载带宽数据并构建索引
-        List<Map<String, Object>> bandwidthData = bandwidthService.queryAll();
-        Map<String, Map<String, Object>> bwMap = new java.util.HashMap<>();
-        for (Map<String, Object> bw : bandwidthData) {
-            String key = bw.get("neId") + ":" + bw.get("slotNo") + ":" + bw.get("portNo");
-            bwMap.put(key, bw);
-        }
-
-        // 动态文件名
-        String scope = (network != null && !network.isEmpty()) ? network : "全网";
-        String timestamp = java.time.LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyyMMddHHmm"));
-        String filename = "光功率_" + scope + "_" + timestamp + ".xlsx";
-
-        response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
-        String encodedName = java.net.URLEncoder.encode(filename, "UTF-8").replace("+", "%20");
-        response.setHeader("Content-Disposition", "attachment; filename=\"optical_power.xlsx\"; filename*=UTF-8''" + encodedName);
-
-        try (Workbook workbook = new XSSFWorkbook();
-             OutputStream out = response.getOutputStream()) {
-
-            Sheet sheet = workbook.createSheet("光功率巡检结果");
-
-            // 标题行
-            Row header = sheet.createRow(0);
-            String[] columns = {"网元名称", "网元ID", "所属网络", "设备类型", "槽位", "端口", "端口名称", "激光器状态",
-                    "光模块速率", "距离档", "模块型号", "生产厂商",
-                    "发送功率(dBm)", "接收功率(dBm)", "发送状态", "接收状态",
-                    "带宽利用率(%)", "已用容量", "总容量",
-                    "发送低门限", "发送高门限", "接收低门限", "接收高门限", "巡检时间", "备注"};
-
-            CellStyle headerStyle = workbook.createCellStyle();
-            Font headerFont = workbook.createFont();
-            headerFont.setBold(true);
-            headerStyle.setFont(headerFont);
-            headerStyle.setAlignment(HorizontalAlignment.CENTER);
-
-            for (int i = 0; i < columns.length; i++) {
-                Cell cell = header.createCell(i);
-                cell.setCellValue(columns[i]);
-                cell.setCellStyle(headerStyle);
-            }
-
-            // 数据行
-            CellStyle normalStyle = workbook.createCellStyle();
-            normalStyle.setAlignment(HorizontalAlignment.CENTER);
-
-            CellStyle warnStyle = workbook.createCellStyle();
-            warnStyle.setAlignment(HorizontalAlignment.CENTER);
-            Font warnFont = workbook.createFont();
-            warnFont.setColor(IndexedColors.RED.getIndex());
-            warnStyle.setFont(warnFont);
-
-            int rowIdx = 1;
-            for (OpticalPowerInspection r : data) {
-                Row row = sheet.createRow(rowIdx++);
-                row.createCell(0).setCellValue(r.getNeName() != null ? r.getNeName() : "");
-                row.createCell(1).setCellValue(r.getNeId() != null ? r.getNeId() : "");
-                row.createCell(2).setCellValue(r.getNetworkName() != null ? r.getNetworkName() : "");
-                row.createCell(3).setCellValue(r.getNeTypeName() != null ? r.getNeTypeName().replaceAll("^[A-Za-z]+", "") : "");
-                row.createCell(4).setCellValue(r.getSlotNo() != null ? r.getSlotNo() : 0);
-                row.createCell(5).setCellValue(r.getPortNo() != null ? r.getPortNo() : 0);
-                row.createCell(6).setCellValue(r.getPortName() != null ? r.getPortName() : "");
-                row.createCell(7).setCellValue(formatLaserState(r.getLaserState()));
-                row.createCell(8).setCellValue(r.getLaserType() != null ? r.getLaserType() : "--");
-                row.createCell(9).setCellValue(r.getLaserDistance() != null ? r.getLaserDistance() : "--");
-                row.createCell(10).setCellValue(r.getModuleTypeKey() != null ? r.getModuleTypeKey() : "--");
-                row.createCell(11).setCellValue(r.getVendorName() != null ? r.getVendorName() : "--");
-
-                // 功率值（保留1位小数）
-                Cell txCell = row.createCell(12);
-                Cell rxCell = row.createCell(13);
-                if (Boolean.TRUE.equals(r.getSupported()) && r.getTxPower() != null) {
-                    txCell.setCellValue(String.format("%.1f", r.getTxPower()));
-                    rxCell.setCellValue(r.getRxPower() != null ? String.format("%.1f", r.getRxPower()) : "--");
-                } else {
-                    txCell.setCellValue("--");
-                    rxCell.setCellValue("--");
-                }
-
-                // 状态标色
-                Cell txStatusCell = row.createCell(14);
-                String txStatus = formatStatus(r.getTxPowerStatus());
-                txStatusCell.setCellValue(txStatus);
-                txStatusCell.setCellStyle(r.getTxPowerStatus() != null && r.getTxPowerStatus() > 0 ? warnStyle : normalStyle);
-
-                Cell rxStatusCell = row.createCell(15);
-                String rxStatus = formatStatus(r.getRxPowerStatus());
-                rxStatusCell.setCellValue(rxStatus);
-                rxStatusCell.setCellStyle(r.getRxPowerStatus() != null && r.getRxPowerStatus() > 0 ? warnStyle : normalStyle);
-
-                // 带宽利用率
-                String bwKey = r.getNeId() + ":" + r.getSlotNo() + ":" + r.getPortNo();
-                Map<String, Object> bwData = bwMap.get(bwKey);
-                if (bwData != null) {
-                    Number rate = (Number) bwData.get("usageRate");
-                    row.createCell(16).setCellValue(rate != null ? rate.doubleValue() : 0);
-                    row.createCell(17).setCellValue(((Number) bwData.getOrDefault("used", 0)).intValue());
-                    row.createCell(18).setCellValue(((Number) bwData.getOrDefault("capacity", 0)).intValue());
-                } else {
-                    row.createCell(16).setCellValue("--");
-                    row.createCell(17).setCellValue("--");
-                    row.createCell(18).setCellValue("--");
-                }
-
-                row.createCell(19).setCellValue(r.getTxLowThreshold() != null ? r.getTxLowThreshold() : 0);
-                row.createCell(20).setCellValue(r.getTxHighThreshold() != null ? r.getTxHighThreshold() : 0);
-                row.createCell(21).setCellValue(r.getLowThreshold() != null ? r.getLowThreshold() : 0);
-                row.createCell(22).setCellValue(r.getHighThreshold() != null ? r.getHighThreshold() : 0);
-                row.createCell(23).setCellValue(r.getInspectionTime() != null ? r.getInspectionTime().format(DT_FMT) : "");
-                row.createCell(24).setCellValue(r.getFailReason() != null ? r.getFailReason() : "");
-            }
-
-            // 自动列宽
-            for (int i = 0; i < columns.length; i++) {
-                sheet.autoSizeColumn(i);
-            }
-
-            workbook.write(out);
-            out.flush();
-        }
-    }
-
-    private String formatStatus(Integer status) {
-        if (status == null) return "--";
-        return switch (status) {
-            case 0 -> "正常";
-            case 1 -> "越下限";
-            case 2 -> "越上限";
-            default -> "未知";
-        };
-    }
-
-    private String formatLaserState(Integer state) {
-        if (state == null) return "--";
-        return switch (state) {
-            case 1 -> "开";
-            case 2 -> "关";
-            default -> "未知";
-        };
-    }
-
-    // ========== 链路巡检结果 ==========
-
-    /**
-     * 获取链路巡检结果（A端+Z端合并显示）
+     * 查询链路巡检结果（A端+Z端同一行）
      */
     @GetMapping("/link-results")
-    public List<com.optel.qxinspection.entity.sqlite.LinkInspectionResult> getLinkResults(
-            @RequestParam(required = false) Long roundId,
-            @RequestParam(required = false) String network) {
+    public List<LinkInspectionResult> getLinkResults(@RequestParam(required = false) Long roundId,
+                                                     @RequestParam(required = false) String network) {
         return inspectionService.getLinkResults(roundId, network);
     }
 
     /**
-     * 导出链路巡检结果为 Excel（A端+Z端在同一行）
+     * 导出链路巡检结果为 Excel（26 列 / 3 行合并表头 + 说明 Sheet）
      */
     @GetMapping("/export-link")
     public void exportLinkExcel(@RequestParam(required = false) Long roundId,
                                 @RequestParam(required = false) String network,
                                 HttpServletResponse response) throws IOException {
-        List<com.optel.qxinspection.entity.sqlite.LinkInspectionResult> data =
-                inspectionService.getLinkResults(roundId, network);
+        List<LinkInspectionResult> data = inspectionService.getLinkResults(roundId, network);
 
-        // 动态文件名
         String scope = (network != null && !network.isEmpty()) ? network : "全网";
-        String timestamp = java.time.LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyyMMddHHmm"));
+        String timestamp = LocalDateTime.now().format(FILE_TIME_FMT);
         String filename = "链路巡检_" + scope + "_" + timestamp + ".xlsx";
 
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
-        String encodedName = java.net.URLEncoder.encode(filename, "UTF-8").replace("+", "%20");
-        response.setHeader("Content-Disposition", "attachment; filename=\"link_inspection.xlsx\"; filename*=UTF-8''" + encodedName);
+        String encodedName = URLEncoder.encode(filename, StandardCharsets.UTF_8).replace("+", "%20");
+        response.setHeader("Content-Disposition",
+                "attachment; filename=\"link_inspection.xlsx\"; filename*=UTF-8''" + encodedName);
 
         try (Workbook workbook = new XSSFWorkbook();
              OutputStream out = response.getOutputStream()) {
-
-            Sheet sheet = workbook.createSheet("链路巡检结果");
-
-            // 单元格样式
-            CellStyle headerStyle = workbook.createCellStyle();
-            Font headerFont = workbook.createFont();
-            headerFont.setBold(true);
-            headerStyle.setFont(headerFont);
-            headerStyle.setAlignment(HorizontalAlignment.CENTER);
-            headerStyle.setBorderBottom(BorderStyle.THIN);
-            headerStyle.setBorderTop(BorderStyle.THIN);
-            headerStyle.setBorderLeft(BorderStyle.THIN);
-            headerStyle.setBorderRight(BorderStyle.THIN);
-
-            CellStyle normalStyle = workbook.createCellStyle();
-            normalStyle.setAlignment(HorizontalAlignment.CENTER);
-            normalStyle.setBorderBottom(BorderStyle.THIN);
-            normalStyle.setBorderTop(BorderStyle.THIN);
-            normalStyle.setBorderLeft(BorderStyle.THIN);
-            normalStyle.setBorderRight(BorderStyle.THIN);
-
-            CellStyle warnStyle = workbook.createCellStyle();
-            warnStyle.setAlignment(HorizontalAlignment.CENTER);
-            warnStyle.setBorderBottom(BorderStyle.THIN);
-            warnStyle.setBorderTop(BorderStyle.THIN);
-            warnStyle.setBorderLeft(BorderStyle.THIN);
-            warnStyle.setBorderRight(BorderStyle.THIN);
-            Font warnFont = workbook.createFont();
-            warnFont.setColor(IndexedColors.RED.getIndex());
-            warnStyle.setFont(warnFont);
-
-            // 第一行：合并表头（A端、Z端）
-            Row row0 = sheet.createRow(0);
-            Cell seqHeader0 = row0.createCell(0);
-            seqHeader0.setCellValue("序号");
-            seqHeader0.setCellStyle(headerStyle);
-
-            Cell linkHeader0 = row0.createCell(1);
-            linkHeader0.setCellValue("链路名称");
-            linkHeader0.setCellStyle(headerStyle);
-
-            // A端合并单元格
-            CellRangeAddress aRange = new CellRangeAddress(0, 0, 2, 13);
-            sheet.addMergedRegion(aRange);
-            Cell aHeader0 = row0.createCell(2);
-            aHeader0.setCellValue("A端");
-            aHeader0.setCellStyle(headerStyle);
-
-            // Z端合并单元格
-            CellRangeAddress zRange = new CellRangeAddress(0, 0, 14, 25);
-            sheet.addMergedRegion(zRange);
-            Cell zHeader0 = row0.createCell(14);
-            zHeader0.setCellValue("Z端");
-            zHeader0.setCellStyle(headerStyle);
-
-            // 第二行：详细列名
-            Row row1 = sheet.createRow(1);
-            String[] columns = {
-                    "序号", "链路名称",
-                    "A端网元", "A端网元类型", "A端口", "光模块类型", "发光功率\n(dBm)", "收光功率\n(dBm)", "发光状态", "收光状态", "B1差错率", "总带宽\n(Mbps)", "已使用带宽\n(Mbps)", "带宽利用率",
-                    "Z端网元", "Z端网元类型", "Z端口", "光模块类型", "发光功率\n(dBm)", "收光功率\n(dBm)", "发光状态", "收光状态", "B1差错率", "总带宽\n(Mbps)", "已使用带宽\n(Mbps)", "带宽利用率"
-            };
-            for (int i = 0; i < columns.length; i++) {
-                Cell cell = row1.createCell(i);
-                cell.setCellValue(columns[i]);
-                cell.setCellStyle(headerStyle);
-            }
-
-            // 数据行
-            int rowIdx = 2;
-            for (com.optel.qxinspection.entity.sqlite.LinkInspectionResult r : data) {
-                Row row = sheet.createRow(rowIdx++);
-
-                row.createCell(0).setCellValue(r.getSeqNo() != null ? r.getSeqNo() : 0);
-                row.createCell(1).setCellValue(r.getLinkName() != null ? r.getLinkName() : "");
-
-                // A端
-                row.createCell(2).setCellValue(r.getANeName() != null ? r.getANeName() : "");
-                row.createCell(3).setCellValue(r.getANeTypeName() != null ? r.getANeTypeName().replaceAll("^[A-Za-z]+", "") : "");
-                row.createCell(4).setCellValue(r.getAPortName() != null ? r.getAPortName() : "");
-                row.createCell(5).setCellValue(r.getAModuleType() != null ? r.getAModuleType() : "--");
-
-                Cell aTxCell = row.createCell(6);
-                if (r.getATxPower() != null) {
-                    aTxCell.setCellValue(String.format("%.1f", r.getATxPower()));
-                } else {
-                    aTxCell.setCellValue("--");
-                }
-
-                Cell aRxCell = row.createCell(7);
-                if (r.getARxPower() != null) {
-                    aRxCell.setCellValue(String.format("%.1f", r.getARxPower()));
-                } else {
-                    aRxCell.setCellValue("--");
-                }
-
-                Cell aTxStatusCell = row.createCell(8);
-                aTxStatusCell.setCellValue(r.getATxStatus() != null ? r.getATxStatus() : "--");
-                aTxStatusCell.setCellStyle("正常".equals(r.getATxStatus()) ? normalStyle : warnStyle);
-
-                Cell aRxStatusCell = row.createCell(9);
-                aRxStatusCell.setCellValue(r.getARxStatus() != null ? r.getARxStatus() : "--");
-                aRxStatusCell.setCellStyle("正常".equals(r.getARxStatus()) ? normalStyle : warnStyle);
-
-                row.createCell(10).setCellValue(r.getAB1Error() != null ? r.getAB1Error() : "--");
-                row.createCell(11).setCellValue(r.getATotalBandwidth() != null ? r.getATotalBandwidth() : 0);
-                row.createCell(12).setCellValue(r.getAUsedBandwidth() != null ? r.getAUsedBandwidth() : 0);
-                row.createCell(13).setCellValue(r.getABandwidthUsage() != null ? String.format("%.2f", r.getABandwidthUsage()) : "--");
-
-                // Z端
-                row.createCell(14).setCellValue(r.getZNeName() != null ? r.getZNeName() : "");
-                row.createCell(15).setCellValue(r.getZNeTypeName() != null ? r.getZNeTypeName().replaceAll("^[A-Za-z]+", "") : "");
-                row.createCell(16).setCellValue(r.getZPortName() != null ? r.getZPortName() : "");
-                row.createCell(17).setCellValue(r.getZModuleType() != null ? r.getZModuleType() : "--");
-
-                Cell zTxCell = row.createCell(18);
-                if (r.getZTxPower() != null) {
-                    zTxCell.setCellValue(String.format("%.1f", r.getZTxPower()));
-                } else {
-                    zTxCell.setCellValue("--");
-                }
-
-                Cell zRxCell = row.createCell(19);
-                if (r.getZRxPower() != null) {
-                    zRxCell.setCellValue(String.format("%.1f", r.getZRxPower()));
-                } else {
-                    zRxCell.setCellValue("--");
-                }
-
-                Cell zTxStatusCell = row.createCell(20);
-                zTxStatusCell.setCellValue(r.getZTxStatus() != null ? r.getZTxStatus() : "--");
-                zTxStatusCell.setCellStyle("正常".equals(r.getZTxStatus()) ? normalStyle : warnStyle);
-
-                Cell zRxStatusCell = row.createCell(21);
-                zRxStatusCell.setCellValue(r.getZRxStatus() != null ? r.getZRxStatus() : "--");
-                zRxStatusCell.setCellStyle("正常".equals(r.getZRxStatus()) ? normalStyle : warnStyle);
-
-                row.createCell(22).setCellValue(r.getZB1Error() != null ? r.getZB1Error() : "--");
-                row.createCell(23).setCellValue(r.getZTotalBandwidth() != null ? r.getZTotalBandwidth() : 0);
-                row.createCell(24).setCellValue(r.getZUsedBandwidth() != null ? r.getZUsedBandwidth() : 0);
-                row.createCell(25).setCellValue(r.getZBandwidthUsage() != null ? String.format("%.2f", r.getZBandwidthUsage()) : "--");
-            }
-
-            // 自动列宽
-            for (int i = 0; i < columns.length; i++) {
-                sheet.autoSizeColumn(i);
-            }
-
+            writeResultSheet(workbook, data);
+            writeThresholdSheet(workbook);
             workbook.write(out);
             out.flush();
         }
+    }
+
+    // ========== 导出实现 ==========
+
+    private void writeResultSheet(Workbook workbook, List<LinkInspectionResult> data) {
+        Sheet sheet = workbook.createSheet("巡检结果");
+
+        CellStyle headStyle = headerStyle(workbook);
+        CellStyle bodyStyle = bodyStyle(workbook);
+        CellStyle warnStyle = warnStyle(workbook);
+
+        // 第 1 行：序号 | 链路名称 | A端 | Z端
+        Row row0 = styledRow(sheet, 0, headStyle);
+        row0.getCell(0).setCellValue("序号");
+        row0.getCell(1).setCellValue("链路名称");
+        row0.getCell(2).setCellValue("A端");
+        row0.getCell(14).setCellValue("Z端");
+        sheet.addMergedRegion(new CellRangeAddress(0, 0, 2, 13));
+        sheet.addMergedRegion(new CellRangeAddress(0, 0, 14, 25));
+        // 序号 / 链路名称 贯穿 3 行表头
+        mergeVertically(sheet, 0, 2);
+
+        // 第 2 行：网元 | 光模块 | 误码 | 带宽
+        Row row1 = styledRow(sheet, 1, headStyle);
+        row1.getCell(2).setCellValue("网元");
+        sheet.addMergedRegion(new CellRangeAddress(1, 1, 2, 4));
+        row1.getCell(5).setCellValue("光模块");
+        sheet.addMergedRegion(new CellRangeAddress(1, 1, 5, 9));
+        row1.getCell(10).setCellValue("误码");
+        row1.getCell(11).setCellValue("带宽");
+        sheet.addMergedRegion(new CellRangeAddress(1, 1, 11, 13));
+        row1.getCell(14).setCellValue("网元");
+        sheet.addMergedRegion(new CellRangeAddress(1, 1, 14, 16));
+        row1.getCell(17).setCellValue("光模块");
+        sheet.addMergedRegion(new CellRangeAddress(1, 1, 17, 21));
+        row1.getCell(22).setCellValue("误码");
+        row1.getCell(23).setCellValue("带宽");
+        sheet.addMergedRegion(new CellRangeAddress(1, 1, 23, 25));
+
+        // 第 3 行：明细列名
+        Row row2 = styledRow(sheet, 2, headStyle);
+        String[] labels = {
+                null, null,
+                "名称", "类型", "端口", "类型", "TX\n(dBm)", "RX\n(dBm)", "TX\n状态", "RX\n状态", "RS\n错误秒",
+                "总(Mbps)", "已用(Mbps)", "利用率",
+                "名称", "类型", "端口", "类型", "TX\n(dBm)", "RX\n(dBm)", "TX\n状态", "RX\n状态", "RS\n错误秒",
+                "总(Mbps)", "已用(Mbps)", "利用率"
+        };
+        for (int i = 0; i < labels.length; i++) {
+            if (labels[i] != null) {
+                row2.getCell(i).setCellValue(labels[i]);
+            }
+        }
+
+        int rowIdx = 3;
+        for (LinkInspectionResult r : data) {
+            Row row = sheet.createRow(rowIdx++);
+            for (int i = 0; i < EXPORT_COLUMNS; i++) {
+                row.createCell(i).setCellStyle(bodyStyle);
+            }
+            row.getCell(0).setCellValue(r.getSeqNo() != null ? r.getSeqNo() : 0);
+            row.getCell(1).setCellValue(nullToEmpty(r.getLinkName()));
+            writeSide(row, 2, r.getANeName(), r.getANeTypeName(), r.getAPortName(), r.getAModuleType(),
+                    r.getATxPower(), r.getARxPower(), r.getATxStatus(), r.getARxStatus(),
+                    r.getARsErrorSec(), r.getATotalBandwidth(), r.getAUsedBandwidth(),
+                    r.getABandwidthUsage(), warnStyle);
+            writeSide(row, 14, r.getZNeName(), r.getZNeTypeName(), r.getZPortName(), r.getZModuleType(),
+                    r.getZTxPower(), r.getZRxPower(), r.getZTxStatus(), r.getZRxStatus(),
+                    r.getZRsErrorSec(), r.getZTotalBandwidth(), r.getZUsedBandwidth(),
+                    r.getZBandwidthUsage(), warnStyle);
+        }
+
+        sheet.createFreezePane(0, 3);
+        autoSizeColumns(sheet, EXPORT_COLUMNS);
+    }
+
+    /**
+     * 写入一端（A端/Z端）的 12 列数据。
+     */
+    private void writeSide(Row row, int start, String neName, String neTypeName, String portName,
+                           String moduleType, Double txPower, Double rxPower, String txStatus,
+                           String rxStatus, Integer rsErrorSec, Double totalBandwidth,
+                           Double usedBandwidth, Double bandwidthUsage, CellStyle warnStyle) {
+        row.getCell(start).setCellValue(nullToEmpty(neName));
+        setNeType(row.getCell(start + 1), neTypeName);
+        row.getCell(start + 2).setCellValue(nullToEmpty(portName));
+        row.getCell(start + 3).setCellValue(nullToEmpty(moduleType));
+        setNumberOrDash(row.getCell(start + 4), txPower);
+        setNumberOrDash(row.getCell(start + 5), rxPower);
+        setStatus(row.getCell(start + 6), txStatus, warnStyle);
+        setStatus(row.getCell(start + 7), rxStatus, warnStyle);
+        setIntegerOrDash(row.getCell(start + 8), rsErrorSec);
+        // 带宽对外是 Mbps，带小数，不能用整数单元格
+        setNumberOrDash(row.getCell(start + 9), totalBandwidth);
+        setNumberOrDash(row.getCell(start + 10), usedBandwidth);
+        setNumberOrDash(row.getCell(start + 11), bandwidthUsage);
+    }
+
+    private void writeThresholdSheet(Workbook workbook) {
+        Sheet sheet = workbook.createSheet("说明");
+        CellStyle headStyle = headerStyle(workbook);
+        CellStyle bodyStyle = bodyStyle(workbook);
+
+        Row header = sheet.createRow(0);
+        String[] columns = {"速率", "光模块类型", "发光过高门限", "发光过低门限", "收光过高门限", "收光过低门限"};
+        for (int i = 0; i < columns.length; i++) {
+            Cell cell = header.createCell(i);
+            cell.setCellValue(columns[i]);
+            cell.setCellStyle(headStyle);
+        }
+
+        List<ThresholdService.RuleView> views = thresholdService.listRuleViews();
+        int groupStart = 1;
+        for (int i = 0; i < views.size(); i++) {
+            ThresholdService.RuleView view = views.get(i);
+            int rowIdx = i + 1;
+            ThresholdService.Range range = view.range();
+
+            Row row = sheet.createRow(rowIdx);
+            for (int c = 0; c < columns.length; c++) {
+                row.createCell(c).setCellStyle(bodyStyle);
+            }
+            row.getCell(1).setCellValue(view.matchKey());
+            row.getCell(2).setCellValue(range.txHigh());
+            row.getCell(3).setCellValue(range.txLow());
+            row.getCell(4).setCellValue(range.rxHigh());
+            row.getCell(5).setCellValue(range.rxLow());
+
+            boolean groupEnds = i == views.size() - 1 || !views.get(i + 1).rate().equals(view.rate());
+            if (groupEnds) {
+                sheet.getRow(groupStart).getCell(0).setCellValue(view.rate());
+                if (rowIdx > groupStart) {
+                    sheet.addMergedRegion(new CellRangeAddress(groupStart, rowIdx, 0, 0));
+                }
+                groupStart = rowIdx + 1;
+            }
+        }
+        autoSizeColumns(sheet, columns.length);
+    }
+
+    // ========== 导出辅助 ==========
+
+    private static Row styledRow(Sheet sheet, int rowIdx, CellStyle style) {
+        Row row = sheet.createRow(rowIdx);
+        for (int i = 0; i < EXPORT_COLUMNS; i++) {
+            row.createCell(i).setCellStyle(style);
+        }
+        return row;
+    }
+
+    private static void mergeVertically(Sheet sheet, int firstRow, int lastRow) {
+        sheet.addMergedRegion(new CellRangeAddress(firstRow, lastRow, 0, 0));
+        sheet.addMergedRegion(new CellRangeAddress(firstRow, lastRow, 1, 1));
+    }
+
+    private static void autoSizeColumns(Sheet sheet, int columnCount) {
+        for (int i = 0; i < columnCount; i++) {
+            sheet.autoSizeColumn(i);
+            int width = sheet.getColumnWidth(i);
+            sheet.setColumnWidth(i, Math.min(width + 512, 12000));
+        }
+    }
+
+    /** 网元类型以纯数字呈现时写入数值单元格，否则写原文 */
+    private static void setNeType(Cell cell, String typeName) {
+        if (typeName == null || typeName.isBlank()) {
+            cell.setCellValue(EMPTY_CELL);
+            return;
+        }
+        try {
+            cell.setCellValue(Double.parseDouble(typeName));
+        } catch (NumberFormatException e) {
+            cell.setCellValue(typeName);
+        }
+    }
+
+    private static void setStatus(Cell cell, String status, CellStyle warnStyle) {
+        if (status == null || status.isBlank() || ThresholdService.STATUS_NORMAL.equals(status)) {
+            cell.setCellValue(status == null || status.isBlank() ? EMPTY_CELL : status);
+            return;
+        }
+        cell.setCellValue(status);
+        cell.setCellStyle(warnStyle);
+    }
+
+    private static void setNumberOrDash(Cell cell, Double value) {
+        if (value == null) {
+            cell.setCellValue(EMPTY_CELL);
+        } else {
+            cell.setCellValue(value);
+        }
+    }
+
+    private static void setIntegerOrDash(Cell cell, Integer value) {
+        if (value == null) {
+            cell.setCellValue(EMPTY_CELL);
+        } else {
+            cell.setCellValue(value);
+        }
+    }
+
+    private static String nullToEmpty(String value) {
+        return value != null ? value : "";
+    }
+
+    private static CellStyle headerStyle(Workbook workbook) {
+        CellStyle style = bordered(workbook);
+        Font font = workbook.createFont();
+        font.setBold(true);
+        style.setFont(font);
+        style.setWrapText(true);
+        return style;
+    }
+
+    private static CellStyle bodyStyle(Workbook workbook) {
+        return bordered(workbook);
+    }
+
+    private static CellStyle warnStyle(Workbook workbook) {
+        CellStyle style = bordered(workbook);
+        Font font = workbook.createFont();
+        font.setColor(IndexedColors.RED.getIndex());
+        style.setFont(font);
+        return style;
+    }
+
+    private static CellStyle bordered(Workbook workbook) {
+        CellStyle style = workbook.createCellStyle();
+        style.setAlignment(HorizontalAlignment.CENTER);
+        style.setVerticalAlignment(VerticalAlignment.CENTER);
+        style.setBorderBottom(BorderStyle.THIN);
+        style.setBorderTop(BorderStyle.THIN);
+        style.setBorderLeft(BorderStyle.THIN);
+        style.setBorderRight(BorderStyle.THIN);
+        return style;
     }
 
     // ========== 定时巡检 ==========
@@ -508,11 +434,13 @@ public class InspectionController {
         boolean enabled = (Boolean) body.getOrDefault("enabled", false);
         String scope = (String) body.getOrDefault("scope", "ALL");
         String network = (String) body.getOrDefault("network", "");
-        String cron = (String) body.getOrDefault("cronExpression", "0 0 2 * * ?");
+        String cron = (String) body.getOrDefault("cronExpression", InspectionScheduler.DEFAULT_CRON);
         inspectionScheduler.updateConfig(enabled, scope, network, cron);
         auditService.record("CONFIG", "定时巡检", "SUCCESS", "enabled=" + enabled + " cron=" + cron);
         return inspectionScheduler.getStatus();
     }
+
+    // ========== 采集参数 ==========
 
     /**
      * 获取采集参数
@@ -539,59 +467,6 @@ public class InspectionController {
         return inspectionService.getCollectParams();
     }
 
-    // ========== 趋势与异常 ==========
-
-    /**
-     * 单端口历史趋势
-     */
-    @GetMapping("/trend/port")
-    public List<OpticalPowerInspection> getPortTrend(@RequestParam String neId,
-                                                      @RequestParam int slotNo,
-                                                      @RequestParam int portNo) {
-        return inspectionService.getPortTrend(neId, slotNo, portNo);
-    }
-
-    /**
-     * 网元历史趋势
-     */
-    @GetMapping("/trend/ne")
-    public List<OpticalPowerInspection> getNeTrend(@RequestParam String neId) {
-        return inspectionService.getNeTrend(neId);
-    }
-
-    /**
-     * 多轮次趋势分析
-     */
-    @GetMapping("/trend/multi")
-    public Map<String, Object> getMultiTrend(
-            @RequestParam List<Long> roundIds,
-            @RequestParam(required = false) String network,
-            @RequestParam(required = false) String neId,
-            @RequestParam(required = false) String portName) {
-        if (roundIds == null || roundIds.size() < 2 || roundIds.size() > 50) {
-            return Map.of("timeline", List.of(), "ports", List.of());
-        }
-        return inspectionService.getTrendData(roundIds, network, neId, portName);
-    }
-
-    /**
-     * 越限异常汇总（按网元分组）
-     */
-    @GetMapping("/anomaly/summary")
-    public List<Map<String, Object>> getAnomalySummary(
-            @RequestParam(required = false) Long roundId) {
-        return inspectionService.getAnomalySummary(roundId);
-    }
-
-    /**
-     * 越限详细记录
-     */
-    @GetMapping("/anomaly/details")
-    public List<OpticalPowerInspection> getAnomalyDetails(
-            @RequestParam(required = false) Long roundId) {
-        return inspectionService.getOverThresholdRecords(roundId);
-    }
-
     // ========== 门限管理 ==========
 
     /**
@@ -599,61 +474,17 @@ public class InspectionController {
      */
     @GetMapping("/thresholds")
     public List<ThresholdRule> listThresholds() {
-        return thresholdRuleRepository.findAll();
+        return thresholdService.listRules();
     }
 
     /**
-     * 获取门限快照（用于导出）
-     */
-    @GetMapping("/thresholds/snapshot")
-    public Map<String, Object> getThresholdSnapshot() {
-        return thresholdService.getThresholdSnapshot();
-    }
-
-    /**
-     * 创建或更新门限规则
+     * 更新门限规则（只允许修改，不允许新增或删除）
      */
     @PostMapping("/thresholds")
     public ThresholdRule saveThreshold(@RequestBody ThresholdRule rule) {
-        ThresholdRule existing = thresholdRuleRepository
-                .findByLevelTypeAndMatchKey(rule.getLevelType(), rule.getMatchKey())
-                .orElse(null);
-        ThresholdRule saved;
-        if (existing != null) {
-            existing.setTxLow(rule.getTxLow());
-            existing.setTxHigh(rule.getTxHigh());
-            existing.setRxLow(rule.getRxLow());
-            existing.setRxHigh(rule.getRxHigh());
-            existing.setDescription(rule.getDescription());
-            saved = thresholdRuleRepository.save(existing);
-        } else {
-            try {
-                saved = thresholdRuleRepository.save(rule);
-            } catch (org.springframework.dao.DataIntegrityViolationException e) {
-                // 并发创建同一规则，回退为更新
-                existing = thresholdRuleRepository
-                        .findByLevelTypeAndMatchKey(rule.getLevelType(), rule.getMatchKey())
-                        .orElseThrow(() -> e);
-                existing.setTxLow(rule.getTxLow());
-                existing.setTxHigh(rule.getTxHigh());
-                existing.setRxLow(rule.getRxLow());
-                existing.setRxHigh(rule.getRxHigh());
-                existing.setDescription(rule.getDescription());
-                saved = thresholdRuleRepository.save(existing);
-            }
-        }
-        auditService.record("THRESHOLD", rule.getLevelType() + ":" + rule.getMatchKey(), "SUCCESS", null);
+        ThresholdRule saved = thresholdService.updateRule(rule.getMatchKey(), rule);
+        auditService.record("THRESHOLD", rule.getMatchKey(), "SUCCESS", null);
         return saved;
-    }
-
-    /**
-     * 删除门限规则
-     */
-    @DeleteMapping("/thresholds/{id}")
-    public Map<String, Object> deleteThreshold(@PathVariable Long id) {
-        thresholdRuleRepository.deleteById(id);
-        auditService.record("THRESHOLD", "id=" + id, "SUCCESS", "删除门限规则");
-        return Map.of("success", true);
     }
 
     // ========== 时钟拓扑 ==========
@@ -672,45 +503,6 @@ public class InspectionController {
     @PostMapping("/clock/refresh")
     public List<ClockInspectionService.ClockNode> refreshClockTopology() {
         return clockInspectionService.refreshTopology();
-    }
-
-    // ========== 端口关注 ==========
-
-    /**
-     * 切换端口关注状态
-     */
-    @PostMapping("/port/watched/toggle")
-    @org.springframework.transaction.annotation.Transactional
-    public Map<String, Object> togglePortWatched(@RequestBody Map<String, Object> body) {
-        String neId = (String) body.get("neId");
-        int slotNo = ((Number) body.get("slotNo")).intValue();
-        int portNo = ((Number) body.get("portNo")).intValue();
-        String portName = (String) body.getOrDefault("portName", "");
-        String neName = (String) body.getOrDefault("neName", "");
-
-        return portWatchRepository.findByNeIdAndSlotNoAndPortNo(neId, slotNo, portNo)
-                .map(existing -> {
-                    portWatchRepository.delete(existing);
-                    return Map.<String, Object>of("watched", false);
-                })
-                .orElseGet(() -> {
-                    PortWatch pw = new PortWatch();
-                    pw.setNeId(neId);
-                    pw.setSlotNo(slotNo);
-                    pw.setPortNo(portNo);
-                    pw.setPortName(portName);
-                    pw.setNeName(neName);
-                    portWatchRepository.save(pw);
-                    return Map.<String, Object>of("watched", true);
-                });
-    }
-
-    /**
-     * 查询所有关注端口
-     */
-    @GetMapping("/port/watched")
-    public List<PortWatch> listWatchedPorts() {
-        return portWatchRepository.findAll();
     }
 
     // ========== 审计日志 ==========
@@ -742,24 +534,29 @@ public class InspectionController {
             response.sendError(HttpServletResponse.SC_FORBIDDEN, "需要管理员权限");
             return;
         }
-        java.nio.file.Path dbPath = java.nio.file.Path.of("./data/qx_inspection.db");
-        if (!java.nio.file.Files.exists(dbPath)) {
+        Path dbPath = sqliteDbPath();
+        if (!Files.exists(dbPath)) {
             response.sendError(HttpServletResponse.SC_NOT_FOUND, "数据库文件不存在");
             return;
         }
-        String timestamp = java.time.LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyyMMddHHmm"));
+        String timestamp = LocalDateTime.now().format(FILE_TIME_FMT);
         String filename = "qx_inspection_backup_" + timestamp + ".db";
-        String encodedName = java.net.URLEncoder.encode(filename, "UTF-8").replace("+", "%20");
+        String encodedName = URLEncoder.encode(filename, StandardCharsets.UTF_8).replace("+", "%20");
 
         response.setContentType("application/octet-stream");
         response.setHeader("Content-Disposition", "attachment; filename=\"backup.db\"; filename*=UTF-8''" + encodedName);
+        Path snapshot = null;
         try {
-            java.nio.file.Files.copy(dbPath, response.getOutputStream());
+            // WAL 模式下直接拷主库文件会漏掉尚未 checkpoint 的事务，改用 SQLite 自写的一致性快照
+            snapshot = snapshotDatabase();
+            Files.copy(snapshot, response.getOutputStream());
             response.getOutputStream().flush();
-            auditService.record("BACKUP", "SQLite数据库", "SUCCESS", filename);
-        } catch (IOException e) {
+            auditService.record("BACKUP", AUDIT_TARGET_SQLITE, "SUCCESS", filename);
+        } catch (Exception e) {
             log.error("backup failed", e);
-            auditService.record("BACKUP", "SQLite数据库", "FAIL", e.getMessage());
+            auditService.record("BACKUP", AUDIT_TARGET_SQLITE, "FAIL", e.getMessage());
+        } finally {
+            deleteQuietly(snapshot);
         }
     }
 
@@ -789,7 +586,7 @@ public class InspectionController {
             if (read < 16) {
                 return Map.of("success", false, "message", "文件太小，不是有效的 SQLite 数据库");
             }
-            String headerStr = new String(header, java.nio.charset.StandardCharsets.US_ASCII);
+            String headerStr = new String(header, StandardCharsets.US_ASCII);
             if (!headerStr.contains("SQLite format 3")) {
                 return Map.of("success", false, "message", "文件格式不正确，不是有效的 SQLite 数据库");
             }
@@ -797,28 +594,112 @@ public class InspectionController {
             return Map.of("success", false, "message", "文件读取失败: " + e.getMessage());
         }
 
+        Path dbPath = sqliteDbPath();
+        Path incoming = null;
         try {
-            java.nio.file.Path dbDir = java.nio.file.Path.of("./data");
-            if (!java.nio.file.Files.exists(dbDir)) {
-                java.nio.file.Files.createDirectories(dbDir);
-            }
-            java.nio.file.Path dbPath = dbDir.resolve("qx_inspection.db");
-            java.nio.file.Path backupPath = dbDir.resolve("qx_inspection_backup_before_restore.db");
-
-            // 先备份当前数据库
-            if (java.nio.file.Files.exists(dbPath)) {
-                java.nio.file.Files.copy(dbPath, backupPath, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+            // 先落到临时文件并校验表结构，确认是本工具的库之后再覆盖活库
+            incoming = Files.createTempFile("qx_restore_", ".db");
+            Files.copy(file.getInputStream(), incoming, StandardCopyOption.REPLACE_EXISTING);
+            if (!hasRequiredTables(incoming)) {
+                return Map.of("success", false, "message", "文件中缺少必需的数据表，不是本工具的数据库备份");
             }
 
-            // 写入新数据库
-            java.nio.file.Files.copy(file.getInputStream(), dbPath, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+            Path dbDir = dbPath.getParent();
+            if (dbDir != null && !Files.exists(dbDir)) {
+                Files.createDirectories(dbDir);
+            }
 
-            auditService.record("RESTORE", "SQLite数据库", "SUCCESS", originalName);
+            // 覆盖前先留存当前库的一致性快照
+            if (Files.exists(dbPath)) {
+                Path backupPath = dbDir.resolve(PRE_RESTORE_BACKUP);
+                try {
+                    Path prev = snapshotDatabase();
+                    try {
+                        Files.copy(prev, backupPath, StandardCopyOption.REPLACE_EXISTING);
+                    } finally {
+                        deleteQuietly(prev);
+                    }
+                } catch (Exception e) {
+                    log.warn("pre-restore snapshot failed: {}", e.getMessage());
+                }
+            }
+
+            Files.copy(incoming, dbPath, StandardCopyOption.REPLACE_EXISTING);
+
+            // -wal / -shm 属于被覆盖掉的旧库，残留会在下次连接时回放到新库上，必须删除
+            deleteQuietly(dbPath.resolveSibling(dbPath.getFileName() + "-wal"));
+            deleteQuietly(dbPath.resolveSibling(dbPath.getFileName() + "-shm"));
+
+            auditService.record("RESTORE", AUDIT_TARGET_SQLITE, "SUCCESS", originalName);
             return Map.of("success", true, "message", "数据库恢复成功，请重启应用");
-        } catch (IOException e) {
+        } catch (Exception e) {
             log.error("restore database failed", e);
-            auditService.record("RESTORE", "SQLite数据库", "FAIL", e.getMessage());
+            auditService.record("RESTORE", AUDIT_TARGET_SQLITE, "FAIL", e.getMessage());
             return Map.of("success", false, "message", "恢复失败: " + e.getMessage());
+        } finally {
+            deleteQuietly(incoming);
+        }
+    }
+
+    /**
+     * SQLite 库文件路径，从数据源 URL 解析，避免与 spring.datasource.sqlite.url 配置漂移
+     */
+    private Path sqliteDbPath() {
+        String path = sqliteUrl.startsWith(JDBC_SQLITE_PREFIX)
+                ? sqliteUrl.substring(JDBC_SQLITE_PREFIX.length())
+                : sqliteUrl;
+        int query = path.indexOf('?');
+        if (query >= 0) {
+            path = path.substring(0, query);
+        }
+        return Path.of(path);
+    }
+
+    /**
+     * 用 VACUUM INTO 生成一份完整副本：WAL 模式下未 checkpoint 的事务也能包含进去
+     */
+    private Path snapshotDatabase() throws IOException {
+        Path snapshot = Files.createTempFile("qx_snapshot_", ".db");
+        Files.delete(snapshot); // VACUUM INTO 要求目标文件不存在
+        String target = toSqlitePath(snapshot);
+        sqliteJdbc.execute("VACUUM INTO '" + target + "'");
+        return snapshot;
+    }
+
+    /** SQLite 在 Windows 上更接受正斜杠路径；顺便转义单引号 */
+    private static String toSqlitePath(Path path) {
+        return path.toAbsolutePath().toString().replace('\\', '/').replace("'", "''");
+    }
+
+    /**
+     * 校验库中是否包含本工具必需的几张表
+     */
+    private boolean hasRequiredTables(Path dbFile) {
+        String placeholders = String.join(",", java.util.Collections.nCopies(REQUIRED_TABLES.size(), "?"));
+        String sql = "SELECT COUNT(DISTINCT name) FROM sqlite_master WHERE type='table' AND name IN ("
+                + placeholders + ")";
+        try (Connection conn = DriverManager.getConnection(JDBC_SQLITE_PREFIX + toSqlitePath(dbFile));
+             var stmt = conn.prepareStatement(sql)) {
+            for (int i = 0; i < REQUIRED_TABLES.size(); i++) {
+                stmt.setString(i + 1, REQUIRED_TABLES.get(i));
+            }
+            try (var rs = stmt.executeQuery()) {
+                return rs.next() && rs.getInt(1) == REQUIRED_TABLES.size();
+            }
+        } catch (Exception e) {
+            log.warn("failed to verify restored database: {}", e.getMessage());
+            return false;
+        }
+    }
+
+    private static void deleteQuietly(Path path) {
+        if (path == null) {
+            return;
+        }
+        try {
+            Files.deleteIfExists(path);
+        } catch (IOException e) {
+            log.debug("failed to delete temp file {}: {}", path, e.getMessage());
         }
     }
 }
